src/styles/components/_comment.scss
.comment {
  position: absolute;
  width: 100%;
  border-radius: 12px 0px 0px 12px;
  background-color: white;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  border-style: solid;
  border-color: $theme-grey;
  border-width: 2px 0px 2px 2px;
  box-shadow: 5px -2px 4px 1px hsla(0, 0%, 92%, 0.5);

  &__body {
    height: 100%;
    padding-top: 5px;
    overflow: hidden;
  }

  &__rubric-comment {
    margin: 5px 0px 5px 0px;
    padding: 5px 0px 5px 5px;
    border-left: 2px solid $brand-color;
  }
  &__text {
    margin: 5px 0px 5px 0px;
    overflow-wrap: break-word;
    width: inherit;

    // Markdown styling
    h1 {
      font-size: $font-size-large;
      font-weight: bold;
      color: $dark-grey;
      text-decoration: underline;
    }

    h2 {
      font-size: $font-size-medium;
      font-weight: bold;
    }

    h3 {
      font-size: $font-size-medium;
      color: $mid-grey;
    }

    td,
    th {
      border: 1px solid $light-grey;
      padding: 6px;
    }

    tr:nth-child(even) {
      background-color: $very-light-green;
    }

    tr:hover {
      background-color: $light-grey;
    }

    th {
      padding-top: 8px;
      padding-bottom: 8px;
      text-align: left;
      background-color: $brand-color;
      color: white;
    }
  }
  &__textarea {
    width: 96%;
    border-radius: 5px;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    outline: none;
    padding: 3px 0px 3px 3px;
    margin: 5px 3px 3px 3px;
    border: 1px solid $light-grey;

    &:focus {
      box-shadow: 0 0 5px $brand-color;
      padding: 3px 0px 3px 3px;
      margin: 5px 3px 3px 3px;
      border-radius: 5px;
      border: 1px solid $light-grey;
    }
  }

  &__footer {
    display: flex;
    align-items: center;
    &__author {
      font-style: italic;
      color: $dark-grey;
      width: calc(100% - 60px);
    }
    &__buttons {
      width: 20px;
      position: absolute;
      right: 11px;
      bottom: 1px;
    }
  }

  &__pointdelta-field {
    width: 40%;
  }

  &__pointdelta {
    padding: 20px;
    &--null {
      display: none;
    }
    &--zero {
      display: none;
    }
    &--positive {
      @include badgeFormat($brand-color, white);
      position: absolute;
      top: -11px;
      left: -11px;
    }
    &--negative {
      @include badgeFormat($dark-red, white);
      position: absolute;
      top: -11px;
      left: -11px;
    }

    &--small {
      font-size: $font-size-small;
    }
  }

  &--unsaved {
    @extend .comment;
    border: 2px solid red !important;

    &:hover {
      border: 2px solid red !important;
    }
  }

  &:hover {
    border: 2px solid $dark-grey !important;
  }
}

